--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ defusedxml==0.6.0
 Django==2.2.4
 django-scss==0.6.1
 django-static-precompiler==1.8.2
+gunicorn==19.9.0
 idna==2.8
 oauthlib==3.1.0
 PyJWT==1.7.1
@@ -17,3 +18,4 @@ social-auth-core==3.2.0
 sqlparse==0.3.0
 urllib3==1.25.3
 whitenoise==4.1.3
+    
